added discord id and has traded to the html form and implemented the has traded condition

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,6 +12,16 @@
         <label>Email:</label><br>
         <input type="email" name="email" required><br><br>
 
+        <label>Discord ID:</label><br>
+        <input type="text" name="discord_id" placeholder="username#1234" required><br><br>
+
+        <label>Have you ever traded before?</label><br>
+        <select name="has_traded" required>
+            <option value="">--Select--</option>
+            <option value="Yes">Yes</option>
+            <option value="No">No</option>
+        </select><br><br>
+
         <button type="submit">Sign Up</button>
     </form>
 
